--- a/lifecycle-data/products/visual-studio-2013.yml
+++ b/lifecycle-data/products/visual-studio-2013.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio 2013
-  description: Visual Studio 2013 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b94d9b3d87ff3c971739be3ca2ebbb2446764e1b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852123"
 name: Visual Studio 2013
 summary: >+
-  Visual Studio 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Agents, All, Community, Express for Web, Express for Windows, Express for Windows Desktop, IntelliTrace Collector, Modeling SDK, Multibyte MFC Library, Premium, Professional, Release Management, Remote Tools, SDK, Shell (Integrated), Shell (Geïsoleerd), Team Explorer, Test Professional, Ultimate, Visual C++ Redistributable, Web Tools Extensions Extensions
+  Dit is van toepassing op de volgende edities: Agents, Alles, Community, Express voor Web, Express voor Windows, Express voor Windows Desktop, IntelliTrace Collector, Modeling SDK, Multibyte MFC Library, Premium, Professional, Releasebeheer, Werkbalk extern, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Team Explorer, Test Professional, Ultimate, Visual C++ herdistribueerbaar, Uitbreidingen webwerkset
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 01/15/2014
   endDate: 04/09/2024
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agenten\n* Alle\n* Community\n* Express voor web\n* Express voor Windows\n* Express voor Windows-bureaublad\n* IntelliTrace Verzamelaar\n* Modellering SDK\n* Multibyte MFC-bibliotheek\n* Premium\n* Professionele\n* Releasebeheer\n* Hulpprogramma's voor op afstand\n* Sdk\n* Shell (geïntegreerd)\n* Shell (geïsoleerd)\n* Teamverkenner\n* Test Professional\n* Ultimate\n* Visueel C++ herverdeelbaar\n* Extensies voor webgereedschappen"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Alles\n* Community\n* Express voor Web\n* Express voor Windows\n* Express voor Windows Desktop\n* IntelliTrace Collector\n* Modeling SDK\n* Multibyte MFC Library\n* Premium\n* Professional\n* Releasebeheer\n* Werkbalk extern\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Team Explorer\n* Test Professional\n* Ultimate\n* Visual C++ herdistribueerbaar\n* Uitbreidingen webwerkset"
