--- a/lifecycle-data/products/appfabric-11-for-windows-server.yml
+++ b/lifecycle-data/products/appfabric-11-for-windows-server.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: AppFabric 1.1 voor Windows Server
-  description: AppFabric 1.1 voor Windows Server volgt het beleid voor vaste levenscyclus.
+  description: AppFabric 1.1 voor Windows Server volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 64fa9cde8a1c3dffe62eac74d0c43c0cf7911fa7
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851826"
 name: AppFabric 1.1 voor Windows Server
 summary: >+
-  AppFabric 1.1 voor Windows Server volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  AppFabric 1.1 voor Windows Server volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 02/11/2012
   endDate: 04/12/2022
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Verlenging van de levenscyclus](/archive/blogs/msdn/appfabric/microsoft-appfabric-1-1-for-windows-server-support-lifecycle-extension-4112017)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Verlenging van de levenscyclus](/archive/blogs/msdn/appfabric/microsoft-appfabric-1-1-for-windows-server-support-lifecycle-extension-4112017)"
