--- a/lifecycle-data/products/biztalk-server-2013.yml
+++ b/lifecycle-data/products/biztalk-server-2013.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: BizTalk Server 2013
-  description: BizTalk Server 2013 volgt het beleid voor vaste levenscyclus.
+  description: BizTalk Server 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9598ebb125a35917a9f5d125bd1a6e49b42694c3
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851825"
 name: BizTalk Server 2013
 summary: >+
-  BizTalk Server 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  BizTalk Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Branch, Developer, Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 06/12/2013
   endDate: 07/11/2023
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://social.technet.microsoft.com/wiki/contents/articles/18709.biztalk-server-product-lifecycle.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Productinformatie](/biztalk/install-and-config-guides/biztalk-server-2013-and-2013-r2-what-s-new-install-and-upgrade)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Ontwikkelaar\n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://social.technet.microsoft.com/wiki/contents/articles/18709.biztalk-server-product-lifecycle.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Productgegevens](/biztalk/install-and-config-guides/biztalk-server-2013-and-2013-r2-what-s-new-install-and-upgrade)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Developer\n* Enterprise\n* Standard"
