--- a/lifecycle-data/products/microsoft-application-virtualization-50.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-50.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualisatie 5.0
-  description: Microsoft Application Virtualization 5.0 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Application Virtualization 5.0
+  description: Microsoft Application Virtualization 5.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 537410789f17e2ca2d9308c1814f22f823288b32
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851800"
-name: Microsoft Application Virtualisatie 5.0
+name: Microsoft Application Virtualization 5.0
 summary: >+
-  Microsoft Application Virtualization 5.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Application Virtualization 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Remote Desktop Services, voor Terminal Services, voor Windows-desktops
+  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Terminal Services, voor Windows-desktops
 
 products:
 - windows
@@ -36,4 +36,4 @@ releases:
 - version: Original Release
   startDate: 11/01/2012
   endDate: 07/08/2014
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* voor Extern bureaublad-services\n* voor Terminal Services\n* voor Windows-bureaubladen"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Voor Extern bureaublad-services\n* voor Terminal Services\n* voor Windows Desktops"
