--- a/lifecycle-data/products/microsoft-forefront-endpoint-protection-2010.yml
+++ b/lifecycle-data/products/microsoft-forefront-endpoint-protection-2010.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Forefront Endpoint Protection 2010
-  description: Microsoft Forefront Endpoint Protection 2010 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Forefront Endpoint Protection 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 113adafeb18c300817f2c264cf2457b0e24cbd8c
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851961"
 name: Microsoft Forefront Endpoint Protection 2010
 summary: >
-  Microsoft Forefront Endpoint Protection 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Forefront Endpoint Protection 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - office
 policyType: fixed
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 03/31/2011
   endDate: 07/09/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/lifecycle/announcements/sccm-2007-forefront-2010-end-of-support)\n* [Onderhoudsinformatie](https://techcommunity.microsoft.com/t5/Configuration-Manager-Archive/Anti-malware-Platform-Support/ba-p/274186)\n\n> [!NOTE]\n> Klanten moeten op de hoogte blijven van de nieuwste anti-malware platform update om volledig te worden ondersteund. Forefront Endpoint Protection 2010 valt onder hetzelfde levenscyclusbeleid als System Center Configuration Manager 2007 voor zowel reguliere als uitgebreide ondersteuning."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/lifecycle/announcements/sccm-2007-forefront-2010-end-of-support)\n* [Onderhoudsinformatie](https://techcommunity.microsoft.com/t5/Configuration-Manager-Archive/Anti-malware-Platform-Support/ba-p/274186)\n\n> [!NOTE]\n> De klanten moeten op de hoogte blijven van de nieuwste antimalware platformupdate om volledig te worden ondersteund. Forefront Endpoint Protection 2010 valt onder hetzelfde levenscyclusbeleid als System Center Configuration Manager 2007 voor zowel de basis- als uitgebreide ondersteuning."
