--- a/lifecycle-data/products/microsoft-office-for-mac-2011.yml
+++ b/lifecycle-data/products/microsoft-office-for-mac-2011.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office voor Mac 2011
-  description: Microsoft Office voor Mac 2011 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office voor Mac 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b2469fc1a66c94cb7a3d71ea25595ed2eb4be125
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851751"
 name: Microsoft Office voor Mac 2011
 summary: >+
-  Microsoft Office voor Mac 2011 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office voor Mac 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Academic, Home and Business, Home and Business Home Use Program, Home and Student, Standard
+  Dit is van toepassing op de volgende edities: Academic, Thuisgebruik en Zelfstandigen, Thuisgebruik en Zelfstandigen Home Use Program, Home en Student, Standard
 
 products:
 - office
@@ -35,4 +35,4 @@ releases:
 - version: Original Release
   startDate: 12/09/2010
   endDate: 01/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De algemene ondersteuning voor Microsoft Office voor Mac 2011 wordt uitgebreid, zoals wordt weergegeven om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n\n## <a name=\"editions\"></a>Edities \n* Academische\n* Thuis en zakelijk\n* Home en Business Home Use Program\n* Thuis en student\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De basisondersteuning voor Microsoft Office voor Mac 2011 wordt uitgebreid zoals wordt weergegeven om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n\n## <a name=\"editions\"></a>Edities \n* Academic\n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Zelfstandigen Home Use Program\n* Thuisgebruik en Studenten\n* Standard"
