--- a/lifecycle-data/products/microsoft-system-center-2012-r2-endpoint-protection.yml
+++ b/lifecycle-data/products/microsoft-system-center-2012-r2-endpoint-protection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft System Center 2012 R2-eindpuntbeveiliging
-  description: Microsoft System Center 2012 R2 Endpoint Protection volgt het beleid voor vaste levenscyclus.
+  title: Microsoft System Center 2012 R2 Endpoint Protection
+  description: Microsoft System Center 2012 R2 Endpoint Protection volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8e3f5935bc3b59d2a18a967b2bb5001c0ce01c1d
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851746"
-name: Microsoft System Center 2012 R2-eindpuntbeveiliging
+name: Microsoft System Center 2012 R2 Endpoint Protection
 summary: >+
-  Microsoft System Center 2012 R2 Endpoint Protection volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center 2012 R2 Endpoint Protection volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/16/2014
   endDate: 07/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://techcommunity.microsoft.com/t5/Configuration-Manager-Archive/Anti-malware-Platform-Support/ba-p/274186)\n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/Configuration-Manager-Blog/End-of-Support-for-SCEP-for-Mac-and-SCEP-for-Linux-on-December/ba-p/286257)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Documentatie van Microsoft Endpoint Manager](/mem/)\n\n> [!NOTE]\n> Klanten moeten op de hoogte blijven van de nieuwste anti-malware platform update om volledig te worden ondersteund."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://techcommunity.microsoft.com/t5/Configuration-Manager-Archive/Anti-malware-Platform-Support/ba-p/274186)\n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Configuration-Manager-Blog/End-of-Support-for-SCEP-for-Mac-and-SCEP-for-Linux-on-December/ba-p/286257)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Documentatie van Microsoft Endpoint Manager](/mem/)\n\n> [!NOTE]\n> De klanten moeten op de hoogte blijven van de nieuwste antimalware platformupdate om volledig te worden ondersteund."
