--- a/lifecycle-data/products/service-bus-for-windows-server.yml
+++ b/lifecycle-data/products/service-bus-for-windows-server.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Servicebus voor Windows Server
-  description: Servicebus voor Windows Server volgt het beleid voor de levenscyclus van componenten.
+  title: Service Bus voor Windows Server
+  description: Service Bus voor Windows Server volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1641a04266351d29d8b152c5bc87f62207344b65
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851859"
-name: Servicebus voor Windows Server
+name: Service Bus voor Windows Server
 summary: >
-  Servicebus voor Windows Server volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Service Bus voor Windows Server volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 
   > [!IMPORTANT]
 
-  > Wanneer Servicebus 1.1 een onderdeel is van SharePoint Server 2016 of SharePoint Server 2013, wordt deze ondersteund op basis van de einddatum van de ondersteuningsdatums van de betreffende SharePoint Server-versie.
+  > Wanneer Service Bus 1.1 een onderdeel is van SharePoint Server 2016 of SharePoint Server 2013, wordt deze ondersteund op basis van het einde van de ondersteuningsdatums van de betreffende SharePoint Server-versie.
 products:
 - windows
 policyType: component
