--- a/lifecycle-data/products/visual-studio-team-foundation-server-2013.yml
+++ b/lifecycle-data/products/visual-studio-team-foundation-server-2013.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio Team Foundation Server 2013
-  description: Visual Studio Team Foundation Server 2013 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio Team Foundation Server 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b24e1b9ebaf9855024973bfa2ff6b7d90e3af408
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852032"
 name: Visual Studio Team Foundation Server 2013
 summary: >+
-  Visual Studio Team Foundation Server 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio Team Foundation Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: All, Release Management
+  Dit is van toepassing op de volgende edities: Alles, Releasebeheer
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 01/15/2014
   endDate: 10/11/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/azure/devops/server/tfs-is-now-azure-devops-server?view=azure-devops)\n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Voor Release Management Server voor TFS 2013 wordt Update 4 ondersteund volgens de beleidsrichtlijnen tot 4/9/2024.\n\n## <a name=\"editions\"></a>Edities \n* Alle\n* Releasebeheer"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/azure/devops/server/tfs-is-now-azure-devops-server?view=azure-devops)\n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Update 4 voor de releasebeheerserver voor TFS 2013 wordt ondersteund volgens de beleidsrichtlijnen tot 9/4/2024.\n\n## <a name=\"editions\"></a>Edities \n* Alles\n* Releasebeheer"
