--- a/lifecycle-data/products/visual-studio-team-foundation-server-2015.yml
+++ b/lifecycle-data/products/visual-studio-team-foundation-server-2015.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio Team Foundation Server 2015
-  description: Visual Studio Team Foundation Server 2015 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio Team Foundation Server 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7ff7e78930b60209ffb1bee2ba4da54aa6504027
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852122"
 name: Visual Studio Team Foundation Server 2015
 summary: >+
-  Visual Studio Team Foundation Server 2015 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio Team Foundation Server 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Alle
+  Dit is van toepassing op de volgende edities: Alles
 
 products:
 - vs
@@ -33,4 +33,4 @@ releases:
 - version: Original Release
   startDate: 07/20/2015
   endDate: 04/10/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n* [Productinformatie - Azure Dev Ops](/azure/devops/server/whats-new?view=azure-devops)\n\n\n## <a name=\"editions\"></a>Edities \n* Alle"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n* [Productgegevens - Azure Dev Ops](/azure/devops/server/whats-new?view=azure-devops)\n\n\n## <a name=\"editions\"></a>Edities \n* Alles"
