--- a/lifecycle-data/products/windows-10-iot-2015-ltsb.yml
+++ b/lifecycle-data/products/windows-10-iot-2015-ltsb.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows 10 IoT 2015 LTSB
-  description: Windows 10 IoT 2015 LTSB volgt het beleid voor vaste levenscyclus.
+  description: Windows 10 IoT 2015 LTSB volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 68cfcc967eb5a79d7d1cfffcf2419560d6e993bb
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851694"
 name: Windows 10 IoT 2015 LTSB
 summary: >+
-  Windows 10 IoT 2015 LTSB volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows 10 IoT 2015 LTSB volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise
+  Dit is van toepassing op de volgende edities: Enterprise
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/29/2015
   endDate: 10/14/2025
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows as a Service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Veelgestelde vragen over Windows 10 LTSC](/lifecycle/faq/windows#what-are-the-requirements-for-servicing-and-updating-the-windows-10-long-term-servicing-channel)\n* [Windows 10 October Update (versie 1809) opnieuw uit te brengen](https://blogs.windows.com/windowsexperience/2018/11/13/resuming-the-rollout-of-the-windows-10-october-2018-update/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Veelgestelde vragen over Windows 10 LTSC](/lifecycle/faq/windows#what-are-the-requirements-for-servicing-and-updating-the-windows-10-long-term-servicing-channel)\n* [Windows 10-update van oktober (versie 1809) opnieuw uitgebracht](https://blogs.windows.com/windowsexperience/2018/11/13/resuming-the-rollout-of-the-windows-10-october-2018-update/)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
