--- a/lifecycle-data/products/windows-azure-pack-on-windows-server-2016.yml
+++ b/lifecycle-data/products/windows-azure-pack-on-windows-server-2016.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Azure Pack (op Windows Server 2016)
-  description: Windows Azure Pack (op Windows Server 2016) volgt het beleid voor vaste levenscyclus.
+  description: Windows Azure Pack (op Windows Server 2016) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a3bc7138c47161efae20613f28d27e015d290e41
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851683"
 name: Windows Azure Pack (op Windows Server 2016)
 summary: >+
-  Windows Azure Pack (op Windows Server 2016) volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Azure Pack (op Windows Server 2016) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 10/12/2016
   endDate: 01/12/2027
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Meer informatie](/previous-versions/azure/windows-server-azure-pack/dn296435(v=technet.10))\n\n> [!NOTE]\n> Windows Azure Pack voor Windows Server is een hybride cloudoplossing die Windows Azure-technologieën naar uw datacenter brengt. Hiermee kunnen Microsoft-klanten een rijke, selfservice cloud met meerdere huurders op de hardware van uw datacenter aanbieden zonder extra kosten."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Meer informatie](/previous-versions/azure/windows-server-azure-pack/dn296435(v=technet.10))\n\n> [!NOTE]\n> Windows Azure Pack voor Windows Server is een hybride cloudoplossing die Windows Azure-technologieën naar uw datacenter brengt. Hiermee kunnen Microsoft-klanten een rijke, selfservice cloud met meerdere huurders op de hardware van uw datacenter aanbieden zonder extra kosten."
