--- a/lifecycle-data/products/windows-embedded-posready-7.yml
+++ b/lifecycle-data/products/windows-embedded-posready-7.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Embedded POSReady 7
-  description: Windows Embedded POSReady 7 volgt het beleid voor vaste levenscyclus.
+  description: Windows Embedded POSReady 7 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 61f2ed95175d81f6e33f8435e70b3b45a01094f5
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852023"
 name: Windows Embedded POSReady 7
 summary: >+
-  Windows Embedded POSReady 7 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded POSReady 7 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 09/10/2011
   endDate: 10/12/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [* Extended Security Update Program (ESU) - Uitgebreide beveiligingsupdates voor bepaalde Embedded-producten zijn beschikbaar via OEM's.](/lifecycle/faq/extended-security-updates)\n* [Windows IoT Embedded Mode](/windows/iot-core/develop-your-app/embeddedmode)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [* Uitgebreide beveiligingsupdates (ESU) - Uitgebreide beveiligingsupdates voor geselecteerde Embedded-producten zijn via OEM's beschikbaar.](/lifecycle/faq/extended-security-updates)\n* [Windows IoT Embedded-modus](/windows/iot-core/develop-your-app/embeddedmode)"
