--- a/lifecycle-data/products/windows-server-2016-nano-server-installation-option.yml
+++ b/lifecycle-data/products/windows-server-2016-nano-server-installation-option.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Installatieoptie voor Windows Server 2016 Nano Server
-  description: Installatieoptie voor Windows Server 2016 Nano Server volgt het beleid voor moderne levenscyclus.
+  title: Windows Server 2016 Nano Server-installatieoptie
+  description: Windows Server 2016 Nano Server-installatieoptie volgt het modern levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6c8189a0fe39fe3ad0b79147e0b2ddbd67e3f799
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852109"
-name: Installatieoptie voor Windows Server 2016 Nano Server
+name: Windows Server 2016 Nano Server-installatieoptie
 summary: >+
-  Installatieoptie voor Windows Server 2016 Nano Server volgt het beleid [voor moderne](/lifecycle/policies/modern) levenscyclus.
+  Windows Server 2016 Nano Server-installatieoptie volgt het [modern](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Standard
+  Dit is van toepassing op de volgende edities: Datacenter, standaard
 
 products:
 - windows
@@ -26,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 10/15/2016
   endDate: 10/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](/windows-server/get-started/nano-in-semi-annual-channel)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/windows-server/get-started/nano-in-semi-annual-channel)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Standard"
