--- a/lifecycle-data/products/windows-server-2016.yml
+++ b/lifecycle-data/products/windows-server-2016.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server 2016
-  description: Windows Server 2016 volgt het beleid voor vaste levenscyclus.
+  description: Windows Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 26492abfdd2f901d069e6209da505c6296004961
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852103"
 name: Windows Server 2016
 summary: >+
-  Windows Server 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Essentials, MultiPoint Premium, Standard
+  Dit is van toepassing op de volgende edities: Datacenter, Essentials, MultiPoint Premium, Standard
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 10/15/2016
   endDate: 01/12/2027
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/windows-server/get-started/server-basics)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Onmisbaar\n* MultiPoint Premium\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/windows-server/get-started/server-basics)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* MultiPoint Premium\n* Standard"
