--- a/lifecycle-data/products/windows-server-update-services-for-windows-server-2012-r2.yml
+++ b/lifecycle-data/products/windows-server-update-services-for-windows-server-2012-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server Update Services voor Windows Server 2012 R2
-  description: Windows Server Update Services voor Windows Server 2012 R2 volgt het beleid voor levenscyclus van componenten.
+  description: Windows Server Update Services voor Windows Server 2012 R2 volgt het levenscyclusbeleid van onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: db602a56da102f56953ea16e19275df5aa653458
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852022"
 name: Windows Server Update Services voor Windows Server 2012 R2
 summary: >+
-  Windows Server Update Services voor Windows Server 2012 R2 volgt het beleid voor levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Windows Server Update Services voor Windows Server 2012 R2 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -23,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 11/25/2013
   endDate: 10/10/2023
-content: "> [!TIP]\n> Deze component volgt de levenscyclus van het bovenliggende product, Windows Server 2012 R2\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows Server 2012 R2](/lifecycle/)"
+content: "> [!TIP]\n> Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2012 R2.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2012 R2](/lifecycle/)"
