--- a/lifecycle-data/products/windows-small-business-server-2011.yml
+++ b/lifecycle-data/products/windows-small-business-server-2011.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Small Business Server 2011
-  description: Windows Small Business Server 2011 volgt het beleid voor vaste levenscyclus.
+  description: Windows Small Business Server 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 61033305f4abf2b1c63cd15f8ae3dce88331fa7e
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851849"
 name: Windows Small Business Server 2011
 summary: >
-  Windows Small Business Server 2011 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Small Business Server 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Essentials, Premium Add-On, Standard
+  Dit is van toepassing op de volgende edities: Essentials, Premium Add-On, Standard
 
 
   > [!IMPORTANT]
 
-  > De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke componentproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.
+  > De ondersteuningsdatum voor dit productpakket wordt bepaald door de respectievelijke levenscyclus van het afzonderlijke onderdeelproduct. Bekijk de levenscyclus van het afzonderlijke onderdeelproduct om de duur van de ondersteuning te bepalen.
 products:
 - windows
 policyType: fixed
@@ -28,4 +28,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 03/09/2011
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://aka.ms/AA1ovn4)\n* [Windows Small Business Server 2011 Standard migreren naar Windows Server Essentials](/windows-server-essentials/migrate/migrate-windows-small-business-server-2011-standard-to-windows-server-essentials)\n\n\n## <a name=\"editions\"></a>Edities \n* Onmisbaar\n* Premium Add-On\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Windows Small Business Server 2011 Standard migreren naar Windows Server Essentials](/windows-server-essentials/migrate/migrate-windows-small-business-server-2011-standard-to-windows-server-essentials)\n\n\n## <a name=\"editions\"></a>Edities \n* Essentials\n* Premium Add-On\n* Standard"
