--- a/lifecycle-data/products/windows-storage-server-2008-r2.yml
+++ b/lifecycle-data/products/windows-storage-server-2008-r2.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Storage Server 2008 R2
-  description: Windows Storage Server 2008 R2 volgt het beleid voor vaste levenscyclus.
+  description: Windows Storage Server 2008 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 28647cde233349efc4b33be28393ce0916020c33
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852018"
 name: Windows Storage Server 2008 R2
 summary: >
-  Windows Storage Server 2008 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Storage Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Essentials, Standard
+  Dit is van toepassing op de volgende edities: Essentials, Standard
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - windows
 policyType: fixed
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 12/20/2010
   endDate: 04/09/2013
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsinformatie beëindigen](https://support.microsoft.com/help/4456235/end-of-support-for-windows-server-2008-and-windows-server-2008-r2)\n* [Migratiebegeleiding](/archive/blogs/storageserver/announcing-windows-storage-server-2016)\n* [Veelgestelde vragen over uitgebreide beveiligingsupdate](/lifecycle/faq/extended-security-updates)\n* [Serverupgradegegevens](/windows-server/upgrade/upgrade-overview)\n\n> [!NOTE]\n> Essentials editie uitgebracht op 28 juni 2011.\n\n## <a name=\"editions\"></a>Edities \n* Onmisbaar\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Einde van de ondersteuningsgegevens](https://support.microsoft.com/help/4456235/end-of-support-for-windows-server-2008-and-windows-server-2008-r2)\n* [Richtlijnen voor migratie](/archive/blogs/storageserver/announcing-windows-storage-server-2016)\n* [Veelgestelde vragen over uitgebreide beveiligingsupdates](/lifecycle/faq/extended-security-updates)\n* [Serverupgradegegevens](/windows-server/upgrade/upgrade-overview)\n\n> [!NOTE]\n> Essentials-editie uitgebracht op 28 juni 2011.\n\n## <a name=\"editions\"></a>Edities \n* Essentials\n* Standard"
